# pcf-tma-pipeline

./: .gitignore  README.md  config.example.yaml  pyproject.toml
notebooks/.ipynb_checkpoints/: verify_test_dataset-checkpoint.ipynb
pcf_pipeline/: __init__.py  __main__.py  cli.py  config.py  log.py  utils.py
pcf_pipeline/steps/: step1_masks.py  step2_cores.py  step3_fovs.py  step4_nimbus.py  step5_merge.py
scripts/: create_test_dataset.py  run_pipeline.sh
tests/: conftest.py  test_config.py  test_integration.py  test_step1_masks.py  test_step2_cores.py  test_step3_fovs.py  test_step4_nimbus.py  test_step5_merge.py
